ast/src/snapshots/transmute_ast__lexer__tests__next_equal_equal.snap
---
source: ast/src/lexer.rs
expression: actual
---
Token {
    kind: EqualEqual,
    span: 1:1; [0, 2],
}
