ast/src/snapshots/transmute_ast__lexer__tests__next_explaim.snap
---
source: ast/src/lexer.rs
expression: actual
---
Token {
    kind: Exclaim,
    span: 1:1; [0, 1],
}
