ast/src/snapshots/transmute_ast__lexer__tests__next_greater.snap
---
source: ast/src/lexer.rs
expression: actual
---
Token {
    kind: Greater,
    span: 1:1; [0, 1],
}
