ast/src/snapshots/transmute_ast__lexer__tests__next_minus.snap
---
source: ast/src/lexer.rs
expression: actual
---
Token {
    kind: Minus,
    span: 1:1; [0, 1],
}
