ast/src/snapshots/transmute_ast__lexer__tests__next_neg_number.snap
---
source: ast/src/lexer.rs
expression: actual
---
Token {
    kind: Number(
        -42,
    ),
    span: 1:1; [0, 3],
}
