ast/src/snapshots/transmute_ast__lexer__tests__next_open_curly_bracket.snap
---
source: ast/src/lexer.rs
expression: actual
---
Token {
    kind: OpenCurlyBracket,
    span: 1:1; [0, 1],
}
