ast/src/snapshots/transmute_ast__lexer__tests__next_open_parenthesis.snap
---
source: ast/src/lexer.rs
expression: actual
---
Token {
    kind: OpenParenthesis,
    span: 1:1; [0, 1],
}
