ast/src/snapshots/transmute_ast__lexer__tests__next_plus.snap
---
source: ast/src/lexer.rs
expression: actual
---
Token {
    kind: Plus,
    span: 1:1; [0, 1],
}
